// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Redux Setup Module Initial reducer state 1`] = `
Object {
  "area": Object {
    "geojson": null,
    "id": null,
    "name": "",
    "wdpaid": 0,
  },
  "country": null,
  "error": false,
  "snapshot": "",
}
`;

exports[`Redux Setup Module Simple Actions: snapshot and reducer test initSetup 1`] = `
Object {
  "type": "setup/INIT_SETUP",
}
`;

exports[`Redux Setup Module Simple Actions: snapshot and reducer test initSetup 2`] = `
Object {
  "area": Object {
    "geojson": null,
    "id": null,
    "name": "",
    "wdpaid": 0,
  },
  "country": null,
  "error": false,
  "snapshot": "",
}
`;

exports[`Redux Setup Module Simple Actions: snapshot and reducer test setSetupArea 1`] = `
Object {
  "payload": Object {
    "area": Object {
      "name": "nameMock",
    },
    "snapshot": "snapshotMock",
  },
  "type": "setup/SET_AOI",
}
`;

exports[`Redux Setup Module Simple Actions: snapshot and reducer test setSetupArea 2`] = `
Object {
  "area": Object {
    "name": "nameMock",
  },
  "country": null,
  "error": false,
  "snapshot": "snapshotMock",
}
`;

exports[`Redux Setup Module Simple Actions: snapshot and reducer test setSetupArea 3`] = `
Object {
  "payload": Object {
    "area": Object {
      "geojson": "geojsonMock",
      "id": "idMock",
      "name": "nameMock",
      "wdpaid": "wdpaidMock",
    },
    "snapshot": "snapshotMock",
  },
  "type": "setup/SET_AOI",
}
`;

exports[`Redux Setup Module Simple Actions: snapshot and reducer test setSetupArea 4`] = `
Object {
  "area": Object {
    "geojson": "geojsonMock",
    "id": "idMock",
    "name": "nameMock",
    "wdpaid": "wdpaidMock",
  },
  "country": null,
  "error": false,
  "snapshot": "snapshotMock",
}
`;

exports[`Redux Setup Module Simple Actions: snapshot and reducer test setSetupCountry 1`] = `
Object {
  "payload": Object {
    "bbox": "{\\"bboxMock\\":\\"mockData\\"}",
    "centroid": "{\\"centroidMock\\":\\"mockData\\"}",
    "iso": "isoMock",
    "name": "nameMock",
  },
  "type": "setup/SET_COUNTRY",
}
`;

exports[`Redux Setup Module Simple Actions: snapshot and reducer test setSetupCountry 2`] = `
Object {
  "area": Object {
    "geojson": null,
    "id": null,
    "name": "",
    "wdpaid": 0,
  },
  "country": Object {
    "bbox": Object {
      "bboxMock": "mockData",
    },
    "centroid": Object {
      "centroidMock": "mockData",
    },
    "iso": "isoMock",
    "name": "nameMock",
  },
  "error": false,
  "snapshot": "",
}
`;
